Fixed spacing between radio buttons

--- a/src/App.css
+++ b/src/App.css
@@ -45,17 +45,24 @@
   text-align: center;
 }
 
-.login-page .txtb input {
+.txtb input[type=text] {
   width: 100%;
 }
 
+
+
+.txtb input[type="radio"] {
+  margin-right: 0;
+  margin-left: 2%;
+}
+
 .login-page-btns {
- 
   display: block;
   width: 80%;
   padding: 1% 3%;
   font-size: 20px;
   border-radius: 8px ;
+  border: 2px solid #1b4079;
   text-decoration: none;
   box-shadow: 0 0 10px #808080;
   text-align: center;
@@ -88,7 +95,6 @@
   margin-top: 5%;
   color:#1b4079;
   box-shadow: none;
-  border-color:0.5px #1b4079;
   background: #fff;
 }
 
